# workspace_git

workspace/backpack_sim/: BUILD.bazel  backpack_controller.cc  backpack_controller.h  backpack_payload_30.yaml  backpack_sim.cc  backpack_sim.h  backpack_sim_scene.sdf  payload_30.yaml
workspace/centaur_sim/: BUILD.bazel  FloatingBaseModel.cc  FloatingBaseModel.h  centaur.urdf  centaur_control_model.sdf  centaur_controller.cc  centaur_controller.h  centaur_sim.cc  centaur_sim.h  centaur_sim_scene.sdf  centaur_sim_scene_actuated_balljoint.sdf  centaur_sim_scene_cheat.sdf  centaur_sim_scene_motor_version.sdf  centaur_sim_scene_proprioceptive.sdf  centaur_v2.urdf  centaur_v3.urdf  extract_data.cc  extract_data.h  planner.cc  planner.h  staticInvController.cc  staticInvController.h
workspace/centaur_sim/Utils/: Utils.cc  Utils.h  butterworthFilter.h  cppTypes.h  orientationTools.h  pseudoInverse.h
workspace/centaur_sim/Utils/Goldfarb_Optimizer/: Array.hh  QuadProg++.cc  QuadProg++.hh
workspace/centaur_sim/centaur_description/meshes/: point_foot.STL  thigh.STL
workspace/centaur_sim/centaur_description/meshes/dae/: hip.dae  point_foot.dae  shank.dae  thigh.dae
workspace/centaur_sim/centaur_description/meshes/stl/: hip.STL
workspace/centaur_sim/centaurrobot/: centaurrobot.cc  centaurrobot.h
workspace/centaur_sim/config/: centaur_sim_control_params.yaml  centaur_sim_robot_params.yaml  test_params.yaml
workspace/centaur_sim/controller/: CentaurControl.cc  CentaurControl.h  CentaurControlStates.cc  CentaurControlStates.h  CentaurGaitPattern.cc  CentaurGaitPattern.h  CentaurParams.h  CentaurStates.cc  CentaurStates.h  CentuarGaitPattern.h  ConvexMPC.cc  ConvexMPC.h  LegController.cc  LegController.h  Task.hpp  WBIController.cc  WBIController.h  global_control_flag.h
workspace/centaur_sim/controller/ContactSet/: ContactSpec.hpp  SingleContact.cpp  SingleContact.hpp
workspace/centaur_sim/controller/Tasks/: LinkPosTask.hpp  TorsoOriTask.hpp  TorsoPosTask.cc  TorsoPosTask.hpp
workspace/centaur_sim/data/: ab12_level_ground_normal.yaml  ab13_level_ground.yaml  ab13_level_ground_normal.yaml  ab14_level_ground.yaml  ab14_level_ground_normal.yaml  ab15_level_ground.yaml  ab15_level_ground_normal.yaml  ab16_level_ground.yaml  ab16_level_ground_normal.yaml  ab17_level_ground.yaml  ab17_level_ground_normal.yaml  ab18_04_level_ground_normal.yaml  ab18_level_ground_normal.yaml  ab20_level_ground_normal.yaml  ab23_level_ground_normal.yaml  ab24_level_ground_normal.yaml  ab25_level_ground_normal.yaml  ab27_level_ground_normal.yaml  ab28_02_level_ground_normal.yaml  ab28_level_ground_normal (copy).yaml  ab6_level_ground_normal.yaml  ab6_treadmill_walking.yaml  ab7_level_ground_normal.yaml  ab8_level_ground_normal.yaml  ab9_level_ground_normal.yaml  backpack_stl.STL  gaps_stairs_map.yaml  gaps_stairs_map2.yaml  human_ref_traj.yaml
workspace/centaur_sim/data/normal_speed/: ab10_level_ground_normal.yaml  ab11_level_ground_normal.yaml  ab19_level_ground_normal.yaml  ab21_level_ground_normal.yaml  ab24_level_ground_normal.yaml  ab27_level_ground_normal.yaml  ab30_level_ground_normal.yaml
workspace/centaur_sim/dynamics/: CentaurModel.cpp  CentaurModel.h  FloatingBaseModel.cpp  FloatingBaseModel.h  spatial.h
workspace/centaur_sim/estimator/: contactEstimate.cc  contactEstimate.h  contactEventData.h  linearKalmanFilter.cc  linearKalmanFilter.h
workspace/centaur_sim/log/: map.yaml  no_reactive_control_state.yaml  noo_reaction_control.yaml  reaction_control.yaml  reactive_control_state.yaml  save_test_params.yaml  states.yaml
workspace/centuar_sim/: BUILD.bazel  FloatingBaseModel.cc  FloatingBaseModel.h  centaur_control_model.sdf  centaur_controller.cc  centaur_controller.h  centaur_sim_scene.sdf  centaur_v3.urdf  centuar.urdf  centuar_sim.cc  centuar_sim.h  centuar_v2.urdf  extract_data.cc  extract_data.h  planner.cc  planner.h  staticInvController.cc  staticInvController.h
workspace/centuar_sim/anaymal_meshes/base/: anymal_base.obj.mtl
workspace/centuar_sim/anaymal_meshes/foot/: anymal_foot.obj.mtl
workspace/centuar_sim/centuar_description/meshes/: hip.STL  shank.STL
workspace/centuar_sim/centuar_description/meshes/stl/: point_foot.STL  shank.STL  shank2.STL  thigh.stl
workspace/centuar_sim/config/: test_params.yaml
workspace/fixed_centaur_sim/: BUILD.bazel  fixed_centaur_sim.cc  fixed_centaur_sim.h  kinematicscontroller.cc  kinematicscontroller.h
workspace/fixed_centaur_sim/Utils/: Utils.cc  Utils.h
workspace/fixed_centaur_sim/sdf/: fixed_centaur.sdf  fixed_centaur_control_model.sdf
workspace/lcmTypes/: perception_lcm_struct.lcm
workspace/lcmTypes/perceptionlcm/: perception_information.hpp  robot_states.hpp
workspace/whole-body-sim/: BUILD.bazel  myPID_controller.cc  myPID_controller.h  threeLinks.sdf  three_links_passive.cc  three_links_passive.h
