load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_library",
    "drake_cc_binary",
)

drake_cc_library(
    name = "centuar_sim_lib",
    hdrs = ["centuar_sim.h"],
)

drake_cc_library(
    name = "planner_lib",
    srcs = ["planner.cc"],
    hdrs = ["planner.h"],
    deps = [
        "//systems/framework:leaf_system",
        "//systems/framework:vector",
        "//multibody/plant",
    ],
)



drake_cc_library(
    name = "flaoting_base_model_lib",
    srcs = ["FloatingBaseModel.cc"],
    hdrs = ["FloatingBaseModel.h"],
    deps = [
        "//systems/framework:leaf_system",
        "//systems/framework:vector",
        "//systems/framework:witness_function",
        "//common:find_resource",
        "//multibody/plant",
        "//multibody/parsing",
    ],
)

drake_cc_library(
    name = "extract_data_lib",
    srcs = ["extract_data.cc"],
    hdrs = ["extract_data.h"],
    deps = [
        "//systems/framework:leaf_system",
        "//systems/framework:vector",
        "//multibody/plant",
        "//multibody/tree",
    ],
)


drake_cc_library(
    name = "centaur_controller_lib",
    srcs = [
        "centaur_controller.cc",
        "staticInvController.cc",
    ],
    hdrs = [
        "centaur_controller.h",
        "staticInvController.h"

    ],
    data = [
        "centaur_control_model.sdf",
    ],
    deps = [
        "//systems/framework:leaf_system",
        "//systems/framework:vector",
        "//multibody/plant",
        "//multibody/tree",
        "//multibody/parsing",
        "//common:find_resource",
    ],
)

drake_cc_binary(
    name = "centuar_sim",
    srcs = ["centuar_sim.cc"],
    data = [
        "centuar.urdf",
        "Pendulum.urdf",
        "centaur_v3.urdf",
        "centaur_sim_scene.sdf",

    ],
    deps = [
        ":centuar_sim_lib",
        ":planner_lib",
        ":centaur_controller_lib",
        ":flaoting_base_model_lib",
        "extract_data_lib",
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//common/proto:call_python",
        "//systems/framework:diagram_builder",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:vector_log_sink",
        "//systems/analysis:simulator",
        "//geometry:scene_graph",
        "//geometry:drake_visualizer",
        "//multibody/plant",
        "//multibody/parsing",
        "//lcm",
        "//systems/lcm",
        "@gflags",
    ],
)